Fixed nav css on mobile

--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ img{
     box-shadow: 0 -1px 4px rgba(0,0,0,.15);
     border-radius: 1.5rem 1.5rem 0 0;
     transition: .3s;
+    left: 0px;
   }
 }
 
